# tinytapeout-ihp-25a-sources

.github/workflows/: reharden-tt09.yaml  reharden-tt10.yaml  reharden-wokwi.yaml  reharden.yaml
tt08-hdl/tt_um_MichaelBell_canon/: info.yaml
tt08-hdl/tt_um_MichaelBell_mandelbrot/: info.yaml
tt08-hdl/tt_um_a1k0n_demo/: info.yaml
tt08-hdl/tt_um_dlmiles_tt08_poc_uart/: info.yaml
tt08-hdl/tt_um_emilian_muxpga/: info.yaml
tt08-hdl/tt_um_faramire_rotary_ring_wrapper/: README.md
tt08-hdl/tt_um_find_the_damn_issue/: info.yaml
tt08-hdl/tt_um_ran_DanielZhu/: info.yaml
tt08-hdl/tt_um_silice/: info.yaml
tt08-hdl/tt_um_simon_cipher/: info.yaml
tt08-hdl/tt_um_toivoh_demo/: info.yaml
tt08-hdl/tt_um_toivoh_demo_deluxe/: info.yaml
tt08-hdl/tt_um_tommythorn_maxbw/: info.yaml
tt08-hdl/tt_um_whynot/: info.yaml
tt08-hdl/tt_um_zec_square1/: info.yaml
tt09-hdl/tt_um_MichaelBell_hd_8b10b/: info_orig.yaml
tt09-hdl/tt_um_MichaelBell_rle_vga/: .gitignore
tt09-hdl/tt_um_Nishanth_RISCV/: README.md
tt09-hdl/tt_um_SarpHS_array_mult/: README.md
tt09-hdl/tt_um_alf19185_ALU/: README.md
tt09-hdl/tt_um_algofoogle_tt09_ring_osc/: README.md  info_orig.yaml
tt09-hdl/tt_um_algofoogle_tt09_ring_osc2/: README.md  env-tt09.sh  info.yaml
tt09-hdl/tt_um_algofoogle_tt09_ring_osc3/: README.md  harden.sh  info_orig.yaml
tt09-hdl/tt_um_alif/: .gitignore
tt09-hdl/tt_um_anders_tt_6502/: .gitignore  .gitmodules  info.yaml
tt09-hdl/tt_um_anders_tt_6502/arlet-6502/sim/spi-functional/: CMakeLists.txt  Makefile  cfg.vlt  create-vivado-project.tcl  iver.sh  tb_spi_functional.gtkw  tb_spi_functional.sv  tb_spi_functional_behav.wcfg  xsim.sh
tt09-hdl/tt_um_anders_tt_6502/arlet-6502/sim/spi-functional-gl/: CMakeLists.txt  Makefile  cfg.vlt  create-vivado-project.tcl  iver.sh  primitives_behav.sv  sky130_fd_sc_hd.v.patch  tb_spi_functional.gtkw  tb_spi_functional_gl.sv  tb_spi_functional_gl_behav.wcfg  tb_spi_functional_nl_behav.wcfg  xsim.sh
tt09-hdl/tt_um_arandomdev_fir_engine_top/: info.yaml
tt09-hdl/tt_um_b_10_array_multiplier/: .info.yaml.swp
tt09-hdl/tt_um_cdc_test/: .gitignore
tt09-hdl/tt_um_devinatkin_basys3_uart/: .gitignore  README.md  info.yaml
tt09-hdl/tt_um_dlmiles_dffram32x8_2r1w/: .gitignore  info.yaml
tt09-hdl/tt_um_ece298a_8_bit_cpu_top/: .gitignore
tt09-hdl/tt_um_frequency_counter/: README.md
tt09-hdl/tt_um_gfcwfzkm_scope_bfh_mht1_3/: .gitignore  README.md
tt09-hdl/tt_um_gmejiamtz/: .gitignore
tt09-hdl/tt_um_htfab_caterpillar/: README.md
tt09-hdl/tt_um_levenshtein/: .gitignore  CMakeLists.txt  README.md  info.yaml
tt09-hdl/tt_um_levenshtein/client/: CMakeLists.txt  basic_bus.cpp  basic_bus.h  bit_vector.h  bus.h  client.cpp  client.h  context.h  icestick_spi.cpp  icestick_spi.h  levenshtein.cpp  levenshtein.h  main.cpp  real_context.cpp  real_context.h  runner.cpp  runner.h  spi.h  spi_bus.cpp  spi_bus.h  test_set.cpp  test_set.h  top.v  unicode.cpp  unicode.h  verilator_context.cpp  verilator_context.h  verilator_spi.cpp  verilator_spi.h
tt09-hdl/tt_um_levenshtein/cmake/: asio-config.cmake  fmt-config.cmake  icestorm-config.cmake  lyra-config.cmake  nextpnr-config.cmake  yosys-config.cmake
tt09-hdl/tt_um_levenshtein/docs/: design.dot
tt09-hdl/tt_um_levenshtein/icestick/: CMakeLists.txt  icestick.pcf  top.sv
tt09-hdl/tt_um_levenshtein/pico-ice/: CMakeLists.txt  pico-ice.pcf  top.sv
tt09-hdl/tt_um_levenshtein/scripts/: clock_summary.py
tt09-hdl/tt_um_levenshtein/src/: config_orig.json  levenshtein_controller.sv  spi_controller.sv  spi_wishbone_bridge.sv  tt_um_levenshtein.v  wb_arbiter.sv  wb_interconnect.sv
tt09-hdl/tt_um_levenshtein/test/: Makefile  qspi_sram.sv  tb.gtkw  tb.v  test.py
tt09-hdl/tt_um_lif_sfiguerr/: info.yaml
tt09-hdl/tt_um_micro_tiles_container/: info.yaml
tt09-hdl/tt_um_multiplier_tt09/: .project.v.swp  info.yaml
tt09-hdl/tt_um_nomuwill/: README.md
tt09-hdl/tt_um_pid_controller/: .gitignore  README.md
tt09-hdl/tt_um_program_counter_top_level/: .gitignore
tt09-hdl/tt_um_project_tt09/: info.yaml
tt09-hdl/tt_um_rebeccargb_colorbars/: vgaplayground.v
tt09-hdl/tt_um_rebeccargb_styler/: README.md
tt09-hdl/tt_um_rejunity_ay8913/: info.yaml
tt09-hdl/tt_um_rejunity_e2m0_x_i8_matmul/: info_orig.yaml
tt09-hdl/tt_um_riscv_mini/: README.md
tt09-hdl/tt_um_tiny_ternary_tapeout/: .gitignore  .gitmodules  Makefile
tt09-hdl/tt_um_tiny_ternary_tapeout_csa/: .gitignore  Makefile  README.md
tt09-hdl/tt_um_tinysynth/: .gitignore  README.md  build.sbt
tt09-hdl/tt_um_tobimckellar_top/: makefile
tt09-hdl/tt_um_toivoh_demo_tt09/: info.yaml
tt09-hdl/tt_um_tommythorn_cgates/: info_orig.yaml
tt09-hdl/tt_um_uart_mvm_sys/: compiled
tt09-hdl/tt_um_underserved/: info.yaml
tt09-hdl/tt_um_urish_giant_ringosc/: info.yaml
tt09-hdl/tt_um_urish_sic1/: info.yaml
tt09-hdl/tt_um_znah_vga_ca/: info.yaml  info_orig.yaml
tt10-hdl/tt_um_10_vga_crossyroad/: README.md  info_orig.yaml
tt10-hdl/tt_um_4_bit_ALU/: info.yaml
tt10-hdl/tt_um_DaDDS/: info_orig.yaml
tt10-hdl/tt_um_MAC_Accelerator_OnSachinSharma/: info_orig.yaml
tt10-hdl/tt_um_MichaelBell_tinyQV/: info.yaml
tt10-hdl/tt_um_Qwendu_spi_fpu/: README.md  info.yaml
tt10-hdl/tt_um_Strider93/: info.yaml
tt10-hdl/tt_um_UartMain/: .gitignore  info.yaml
tt10-hdl/tt_um_aditya_patra/: info.yaml
tt10-hdl/tt_um_algofoogle_vga/: .gitignore  README.md  info.yaml
tt10-hdl/tt_um_alphaonesoc/: README.md  info.yaml  info_orig.yaml
tt10-hdl/tt_um_asgerwenneb/: info_orig.yaml
tt10-hdl/tt_um_atomNPU/: info.yaml
tt10-hdl/tt_um_bilal_trng/: README.md  info_orig.yaml
tt10-hdl/tt_um_bitty/: info_orig.yaml  instructions_for_em.txt  tt_um_bitty.qpf  tt_um_bitty.qsf  tt_um_bitty.qws
tt10-hdl/tt_um_branch_pred/: .gitignore  .gitmodules  Dockerfile  Notes.md  README.md  info.yaml  info_orig.yaml  todo.md  useful_commands.txt
tt10-hdl/tt_um_branch_pred/func_sim/: CMakeLists.txt  link.ld  readme.md  reference.c  spike_log.txt  start.S
tt10-hdl/tt_um_branch_pred/func_sim/include/: func_sim.hpp
tt10-hdl/tt_um_branch_pred/func_sim/src/: func_sim.cpp
(+2514 files in other folders)
